@@ -23,7 +23,6 @@ import ca.uhn.fhir.context.BaseRuntimeChildDefinition;
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.context.FhirVersionEnum;
 import ca.uhn.fhir.i18n.Msg;
-import ca.uhn.fhir.interceptor.model.RequestPartitionId;
 import ca.uhn.fhir.jpa.api.dao.DaoRegistry;
 import ca.uhn.fhir.jpa.api.dao.IFhirResourceDao;
 import ca.uhn.fhir.jpa.api.model.ExpungeOptions;
@@ -32,6 +31,7 @@ import ca.uhn.fhir.jpa.binary.svc.NullBinaryStorageSvcImpl;
 import ca.uhn.fhir.jpa.dao.data.INpmPackageDao;
 import ca.uhn.fhir.jpa.dao.data.INpmPackageVersionDao;
 import ca.uhn.fhir.jpa.dao.data.INpmPackageVersionResourceDao;
+import ca.uhn.fhir.jpa.dao.tx.HapiTransactionService;
 import ca.uhn.fhir.jpa.model.config.PartitionSettings;
 import ca.uhn.fhir.jpa.model.dao.JpaPid;
 import ca.uhn.fhir.jpa.model.entity.NpmPackageEntity;
@@ -140,6 +140,9 @@ public class JpaPackageCache extends BasePackageCacheManager implements IHapiPac
 	@Autowired(required = false) // It is possible that some implementers will not create such a bean.
 	private IBinaryStorageSvc myBinaryStorageSvc;
 
+	@Autowired
+	private HapiTransactionService myTransactionService;
+
 	@Override
 	public void addPackageServer(@Nonnull PackageServer thePackageServer) {
 		assert myPackageLoaderSvc != null;
@@ -149,11 +152,6 @@ public class JpaPackageCache extends BasePackageCacheManager implements IHapiPac
 	@Override
 	public String getPackageId(String theS) throws IOException {
 		return myPackageLoaderSvc.getPackageId(theS);
-	}
-
-	@Override
-	public void setSilent(boolean silent) {
-		myPackageLoaderSvc.setSilent(silent);
 	}
 
 	@Override
@@ -246,8 +244,6 @@ public class JpaPackageCache extends BasePackageCacheManager implements IHapiPac
 	 * the bean is unavailable, fallback to assuming we are using an embedded base64 in the data element.
 	 * @param theBinary the Binary who's `data` blob you want to retrieve
 	 * @return a byte array containing the blob.
-	 *
-	 * @throws IOException
 	 */
 	private byte[] fetchBlobFromBinary(IBaseBinary theBinary) throws IOException {
 		if (myBinaryStorageSvc != null && !(myBinaryStorageSvc instanceof NullBinaryStorageSvcImpl)) {
@@ -343,7 +339,7 @@ public class JpaPackageCache extends BasePackageCacheManager implements IHapiPac
 
 			String dirName = "package";
 			NpmPackage.NpmPackageFolder packageFolder = npmPackage.getFolders().get(dirName);
-			Map<String, List<String>> packageFolderTypes = null;
+			Map<String, List<String>> packageFolderTypes;
 			try {
 				packageFolderTypes = packageFolder.getTypes();
 			} catch (IOException e) {
@@ -418,8 +414,6 @@ public class JpaPackageCache extends BasePackageCacheManager implements IHapiPac
 							version = String.valueOf(myCtx.newFhirPath()
 									.evaluateFirst(resourceVersion.get(), "value", IPrimitiveType.class)
 									.orElse(null));
-						} else {
-							version = null;
 						}
 						resourceEntity.setCanonicalVersion(version);
 					}
@@ -455,8 +449,7 @@ public class JpaPackageCache extends BasePackageCacheManager implements IHapiPac
 		if (myPartitionSettings.isPartitioningEnabled()) {
 			SystemRequestDetails requestDetails = new SystemRequestDetails();
 			if (myPartitionSettings.isUnnamedPartitionMode() && myPartitionSettings.getDefaultPartitionId() != null) {
-				requestDetails.setRequestPartitionId(
-						RequestPartitionId.fromPartitionId(myPartitionSettings.getDefaultPartitionId()));
+				requestDetails.setRequestPartitionId(myPartitionSettings.getDefaultRequestPartitionId());
 			} else {
 				requestDetails.setTenantId(JpaConstants.DEFAULT_PARTITION_NAME);
 			}
@@ -580,7 +573,7 @@ public class JpaPackageCache extends BasePackageCacheManager implements IHapiPac
 			try {
 				return loadPackageInner(theInstallationSpec.getName(), theInstallationSpec.getVersion());
 			} catch (IOException e) {
-				throw new InternalErrorException(Msg.code(1302) + e);
+				throw new InternalErrorException(Msg.code(1302) + e, e);
 			}
 		});
 	}
@@ -652,7 +645,7 @@ public class JpaPackageCache extends BasePackageCacheManager implements IHapiPac
 						entity.getFhirVersion(),
 						entity.getPackageId(),
 						entity.getPackageVersion()))
-				.collect(Collectors.toUnmodifiableList());
+				.toList();
 	}
 
 	private List<NpmPackageVersionResourceEntity> loadPackageInfoByCanonicalUrl(
@@ -743,7 +736,7 @@ public class JpaPackageCache extends BasePackageCacheManager implements IHapiPac
 		NpmPackageMetadataJson retVal = new NpmPackageMetadataJson();
 
 		Optional<NpmPackageEntity> pkg = myPackageDao.findByPackageId(thePackageId);
-		if (!pkg.isPresent()) {
+		if (pkg.isEmpty()) {
 			throw new ResourceNotFoundException(Msg.code(1306) + "Unknown package ID: " + thePackageId);
 		}
 
@@ -844,8 +837,15 @@ public class JpaPackageCache extends BasePackageCacheManager implements IHapiPac
 	}
 
 	@Override
-	@Transactional
 	public PackageDeleteOutcomeJson uninstallPackage(String thePackageId, String theVersion) {
+		SystemRequestDetails requestDetails =
+				new SystemRequestDetails().setRequestPartitionId(myPartitionSettings.getDefaultRequestPartitionId());
+		return myTransactionService
+				.withRequest(requestDetails)
+				.execute(() -> doUninstallPackage(thePackageId, theVersion));
+	}
+
+	private PackageDeleteOutcomeJson doUninstallPackage(String thePackageId, String theVersion) {
 		PackageDeleteOutcomeJson retVal = new PackageDeleteOutcomeJson();
 
 		Optional<NpmPackageVersionEntity> packageVersion =
@@ -888,7 +888,7 @@ public class JpaPackageCache extends BasePackageCacheManager implements IHapiPac
 				List<NpmPackageVersionEntity> versions = remainingVersions.stream()
 						.sorted((o1, o2) ->
 								PackageVersionComparator.INSTANCE.compare(o1.getVersionId(), o2.getVersionId()))
-						.collect(Collectors.toList());
+						.toList();
 				for (int i = 0; i < versions.size(); i++) {
 					boolean isCurrent = i == versions.size() - 1;
 					if (isCurrent != versions.get(i).isCurrentVersion()) {
@@ -916,8 +916,11 @@ public class JpaPackageCache extends BasePackageCacheManager implements IHapiPac
 	}
 
 	private void deleteAndExpungeResourceBinary(IIdType theResourceBinaryId, ExpungeOptions theOptions) {
-		getBinaryDao().delete(theResourceBinaryId, new SystemRequestDetails()).getEntity();
-		getBinaryDao().forceExpungeInExistingTransaction(theResourceBinaryId, theOptions, new SystemRequestDetails());
+		SystemRequestDetails requestDetails = new SystemRequestDetails()
+				.setRequestPartitionId(HapiTransactionService.getRequestPartitionAssociatedWithThread());
+
+		getBinaryDao().delete(theResourceBinaryId, requestDetails);
+		getBinaryDao().forceExpungeInExistingTransaction(theResourceBinaryId, theOptions, requestDetails);
 	}
 
 	@Nonnull
